// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rende <TodoList /> component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page-content page-container"
        id="page-content"
      >
        <div
          class="col-lg-12"
        >
          <br />
        </div>
        <div
          class="col-lg-12"
        >
          <h2>
            TODO List
          </h2>
          <div
            class="form-check"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page-content page-container"
      id="page-content"
    >
      <div
        class="col-lg-12"
      >
        <br />
      </div>
      <div
        class="col-lg-12"
      >
        <h2>
          TODO List
        </h2>
        <div
          class="form-check"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render TODO List 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page-content page-container"
        id="page-content"
      >
        <div
          class="col-lg-12"
        >
          <br />
        </div>
        <div
          class="col-lg-12"
        >
          <h2>
            TODO List
          </h2>
          <div
            class="form-check"
          >
            <div>
              <input
                class="form-check-input"
                type="checkbox"
                value="0"
              />
              <label>
                Buy Grocery
              </label>
            </div>
            <div>
              <input
                checked=""
                class="form-check-input"
                type="checkbox"
                value="1"
              />
              <label>
                Play Guitar
              </label>
            </div>
            <div>
              <input
                class="form-check-input"
                type="checkbox"
                value="2"
              />
              <label>
                Romantic Dinner
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page-content page-container"
      id="page-content"
    >
      <div
        class="col-lg-12"
      >
        <br />
      </div>
      <div
        class="col-lg-12"
      >
        <h2>
          TODO List
        </h2>
        <div
          class="form-check"
        >
          <div>
            <input
              class="form-check-input"
              type="checkbox"
              value="0"
            />
            <label>
              Buy Grocery
            </label>
          </div>
          <div>
            <input
              checked=""
              class="form-check-input"
              type="checkbox"
              value="1"
            />
            <label>
              Play Guitar
            </label>
          </div>
          <div>
            <input
              class="form-check-input"
              type="checkbox"
              value="2"
            />
            <label>
              Romantic Dinner
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
